[metadata]
name = bdexpy
version = 0.0.1
author = comp02 2020/21
author_email = vascoregal24@ua.pt
description = Destination Language for bdex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/detiuaveiro/bdex-comp-02
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src